--- a/style.css
+++ b/style.css
@@ -1,68 +1,55 @@
 .mainContainer{
-
     width: 170px;
-    height: 320px;
-    transform: translate(-50%,-50%);
-}
+    height: 330px;
+    transform: translate(-50%,-50%);}
 .firstContainer{
     width: 100%;
-    height: 180px;
-}
+    height: 180px;}
+.firstContainer p{
+    font-family: 'Orbitron', sans-serif;
+    font-size: 15px;
+    font-weight: 100;
+    padding-top: 7px;}
 .imgContainer{
     width:100px;
     height: 150px;
     transform: translate(-50%,-40%);
- 
-    border-radius: 10%;
-}
-.ss{
+    border-radius: 10%;}
+.imgContainer img{
     width: 100%;
     height:100%;
     object-fit: cover;
-    border-radius: 10%;
-}
-.dd{
-    font-family: 'Orbitron', sans-serif;
-    font-size: 15px;
-    font-weight: 100;
-    padding-top: 7px;
-}
+    border-radius: 10%;}
 .detailContainer{
     width: 100%;
-    height: 140px;
-}
-
+    height: 140px;}
 .how{
     font-size: 12px;
-
-    margin-bottom: 0;
-}
+    margin-bottom: 0;}
 .buttonContainer{
     width: auto;
     height: 40px;
-    margin: 2px 0;
-}
-.detailContainer button:hover{
-    font-size: 38px;
-}
-.fa{
+    margin: 2px 0;}
+.buttonContainer button{
     font-size: 29px;
-    margin-top: 0px;
-    
-}
+    margin-top: 0px;}
+.buttonContainer button:hover{
+    font-size: 38px;}
 .give{
     font-size: 12px;
-    transform: translate(-50%,-200%);
-}
-.sumit{
+    }
+.submit{
     width: 100%;
     height: 40px;
-    transform: translateY(-100%);
-}
-.sumit:hover{
-    color: white;
-}
-.submit{
+    }
+.submit:hover{
+    color: white;}
+.submit p{
     font-family: 'Luckiest Guy', cursive;
-    font-size: 20px;
+    font-size: 20px;}
+
+.nextContainer{
+    width: 100%;
+    height: 40px;
+    transform: translateY(40%);
 }
